src/components/home/home.scss
@import "../../app.scss";

.home {
  height: calc(100% - 100px);
  background: linear-gradient(to top, #48204d, #1a0c1c);
  overflow: hidden;
  position: relative;

  .wrapper {
    height: 100%;
    max-width: 1366px;
    margin: auto;

    @include tablet {
      padding: 0 20px;
    }
  }

  .textContainer {
    height: 100%;
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 36px;

    @include mobile {
      width: 100%;
      height: 85%;
      gap: 20px;
      margin: auto;
      text-align: center;
      align-items: center;
    }

    @include tablet {
      width: 50%;
      gap: 5px;
      text-align: center;
      align-items: center;
    }

    h2 {
      font-size: 2rem;
      color: #e523ff;
      letter-spacing: 8px;

      @include mobile {
        font-size: calc(1.8rem + 0.5vw);
        letter-spacing: 5px;
        text-align: center;
      }

      @include tablet {
        font-size: calc(2rem + 0.5vw);
        letter-spacing: 2px;
      }
    }

    h1 {
      font-size: 5rem;
      color: #f0efe7;
      font-weight: 650;

      @include mobile {
        font-size: calc(2rem + 0.5vw);
        padding: 0 10px;
      }

      @include tablet {
        font-size: calc(2.5rem + 0.5vw);
      }
    }

    .buttons {
      display: flex;
      gap: 20px;      
      
      button {
        padding: 20px;
        border-radius: 10px;
        background-color: transparent;
        border: 1px solid white;
        color: white;
        font-weight: 600;
        cursor: pointer;

        @include tablet {
          padding: 10px;
        }
      }

      button:hover {
        background-color: white;
        color: black;
      }
    }
  }

  .scrollButton {
    width: 50px;

    @include tablet {
      padding-bottom: 70px;
    }
  }

  .slidingTextContainer {
    position: absolute;
    font-size: 40vh;
    font-weight: 500;
    color: #ffffff09;
    bottom: -100px;
    left: -50px;
    white-space: nowrap;
    width: 50%;

    @include mobile {
      bottom: calc(-35px - 5vh);
      left: 0;
      width: 100%
    }

    @include tablet {
      bottom: -55px;
      left: 0;
      width: 100%
    }
  }

  .imageContainer {
    height: 100%;
    position: absolute;
    top: 10%;
    right: 0;

    // @include mobile {
    //   height: 25%;
    //   width: 50%;
    //   top: 42%;
    //   right: 22%;

    @include mobile {
      display: none;
    }

      @include tablet {
      height: 70%;
      width: 40%;
      top: 65px;
      right: -50px;
    }
  

    // @include tablet {
    //   display: none;
    

  .myPhoto {
      height: 90%;
      width: 65%;
      object-fit: cover;
      border-radius: 75% 25% 0 0 / 25% 75% 0 0;
      box-shadow: 10px 10px 10px #490452;

      @include mobile {
        height: 90%;
        width: 90%;
        object-fit: fill;
        border-radius: 10% 10% 0 0;
        box-shadow: 5px 3px 5px #2c0332;
      }

      @include tablet {
        box-shadow: 5px 3px 5px #2c0332;
        border-radius: 20px;
      }
    }
  }
}

